# copi-ohos

./: .gitignore  Makefile  README.md  oh-package-lock.json5  oh-package.json5
.github/workflows/: Build.yaml  Release.yaml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
copi_rust/: Cargo.toml
copi_rust/src/: downloading.rs  exports.rs  lib.rs  udto.rs
copi_rust/src/api/: api.rs
copi_rust/src/copy_client/: dtos.rs
copi_rust/src/database/download/: mod.rs
entry/: oh-package-lock.json5  oh-package.json5  patch.json
entry/libs/: oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/data/: context.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: ComicInfo.ets  ComicReader.ets  Home.ets  Index.ets
entry/src/main/ets/pages/components/: CachedImage.ets  ComicCard.ets  ComicCardList.ets  ComicListData.ets  Context.ets  Discovery.ets  Error.ets  Loading.ets  LoginStorage.ets  MaterialIconsCodePoints.ets  Nav.ets  Rank.ets  Settings.ets  User.ets  VersionStore.ets  context.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/zh_CN/element/: string.json
native/: Cargo.toml  Makefile
native/package/: README.md  index.ets  oh-package.json5
native/package/src/main/: module.json5
native/src/: lib.rs
native/src/api/: api.rs
native/src/copy_client/: dtos.rs  tests.rs
native/src/database/active/: local_collect.rs
native/src/database/cache/: web_cache.rs
