[package]
name    = "copi_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0.3", default-features = false, features = [
    "napi8",
    "async",
] }
napi-derive-ohos = { version = "1.0.3" }
once_cell = "1.20.2"
sea-orm = { version = "1.1.2" , features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"], default-features = false}
tokio = { version = "1.42.0", features = ["full"] }
lazy_static = "1.5.0"
anyhow = "1.0.94"
reqwest = { version = "0.12.9", default-features = false, features = ["http2", "json", "multipart", "rustls-tls-native-roots"] }
serde = { version = "1.0.215", features = ["derive", "serde_derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
chrono = { version = "0.4.38", features = ["serde"] }
md5 = "0.7.0"
hex = "0.4.3"
futures-util = "0.3.31"
image = { version = "0.25.5", features = ["jpeg", "gif", "webp", "bmp", "png"] }
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
async_zip = { version = "0.0.16", features = ["full", "tokio-util", "tokio", "tokio-fs", "async-compression"] }
async-trait = "0.1.83"
bytes = { version = "1.9.0", features = ["serde"] }
base64 = "0.22.1"
itertools = "0.13.0"
url = { version = "2.5.4", features = ["serde"] }
num-iter = "0.1.45"

[build-dependencies]
napi-build-ohos = { version = "1.0.3" }

[profile.release]
lto = true
